<resources>
    <string name="app_name">UdacityPortfolio</string>
    <string name="action_settings">Settings</string>
    <string name="main_activity_label">My App Portfolio</string>
    <string name="main_activity_title">My Nanodegree Apps!</string>
    <string name="spotify_streamer">spotify streamer</string>
    <string name="scores_app">scores app</string>
    <string name="library_app">library app</string>
    <string name="build_it_bigger">build it bigger</string>
    <string name="xyz_reader">xyz reader</string>
    <string name="capstone_my_own_app">capstone&#058;&#160;my own app</string>
    <string name="my_own_app_toast_msg">my capstone app</string>
    <string name="toast_msg_first_part">This button will launch&#160;</string>
    <string name="toast_msg_last_part">&#033;</string>
</resources>
