<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:background="@color/main_activity_bg_color"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/_mainActivityTitle"
        android:text="@string/main_activity_title"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:gravity="center"
        android:textColor="@color/black"
        android:textSize="24sp"/>

    <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/_mainActivityTitle"
            android:layout_centerHorizontal="true"
            android:orientation="vertical">
        <TextView
            android:text="@string/spotify_streamer"
            android:id="@+id/spotifyStreamerBtn"
            style="@style/mainBtnStyle"/>
        <TextView
            android:text="@string/scores_app"
            android:id="@+id/scoresAppBtn"
            style="@style/mainBtnStyle"/>
        <TextView
            android:text="@string/library_app"
            android:id="@+id/libraryAppBtn"
            style="@style/mainBtnStyle"/>
        <TextView
            android:text="@string/build_it_bigger"
            android:id="@+id/buildItBiggerBtn"
            style="@style/mainBtnStyle"/>
        <TextView
            android:text="@string/xyz_reader"
            android:id="@+id/xyzReaderBtn"
            style="@style/mainBtnStyle"/>
        <TextView
            android:text="@string/capstone_my_own_app"
            android:id="@+id/capstoneMyOwnAppBtn"
            android:background="@drawable/main_own_app_btn_bg"
            android:textColor="@drawable/myownapp_btn_text_color"
            style="@style/mainBtnStyle"/>
    </LinearLayout>
</RelativeLayout>
